--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "ownerNumber": ["6282193115723@s.whatsapp.net","62887435047326@s.whatsapp.net"],
-    "ownerName": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-    "instagram" : "https://instagram.com/zeeoneofc",
+    "ownerName": "ᴹᴿ᭄پاگⷽــⷦــᷢــⷽــᷞــل لڑکا ×፝֟͜×",
+    "instagram" : "
     "gcwa" : "https://instabio.cc/Alphabot",
     "botName": "Haruka-Mdོ ",
     "footer": "2023 © api.zeeoneofc.my.id",
